--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="terms-header">
             <h2>
                 <span class="header-flag-emoji">🇮🇩</span>
-                Galeri Foto
+                Galeri Hot🔥
             </h2>
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="theme-checkbox">
