--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
             background-color: var(--button-primary-hover-bg);
         }
     </style>
+    <script type='text/javascript' src='//pl26771757.profitableratecpm.com/8a/27/7b/8a277b4d8946d43045b62bd357488e6f.js'></script>
 </head>
 <body>
     <div class="terms-container">
